Fixing z-index for modals.

--- a/app/src/sass/app.scss
+++ b/app/src/sass/app.scss
@@ -6,6 +6,8 @@
  * Bootstrap customizing.
  */
 $navbar-padding-horizontal: 0;
+$zindex-modal-background:  100002;
+$zindex-modal:             100003;
 
 /**
  * External resource: Bootstrap.
